Apply fixes to the following: - class name on externalLink has the same class name as its container - header id not showing when navlink is clicked - spacing

--- a/styles/_component.scss
+++ b/styles/_component.scss
@@ -96,7 +96,8 @@
         }
     }
 
-    &.featuredProject {
+    &.projects {
+        margin: 2em 0;
         text-align: right;
     }
 
